# amor_mortuorum

./: .env.sample  .flake8  README.md  README_DEV_MINIBOSSES.md  README_EPICS.md  arcade.py  pyproject.toml  pytest.ini  requests.py  requirements.txt  responses.py  yaml.py
.github/: labels.yml
.github/ISSUE_TEMPLATE/: boss_task.md  child-task.yml  config.yml  debug-overlay.yml  epic.md  epic.yml  feature-save-persistence.md  feature.yml  qa-harness.yml  telemetry.yml
.github/workflows/: build-release.yml  ci.yml  epic-children.yml  epic_children.yml  epic_sync.yml  manage_epics.yml
configs/: economy.json  github.yml  settings.example.toml
configs/audio/: boss_layers.json  sfx.json  tracks.yaml
configs/epics/: audio_atmosphere.yaml  bosses_balance.yaml  (+6 more)
data/: relics.json  xp_curve.json
docs/: CONTRIBUTING-ISSUE-SYNC.md  CONTRIBUTING_EPICS.md  DEBUGGING_TELEMETRY_QA.md  building.md  ci.md  epics.md  packaging-release.md  paths-and-migration.md  relic_passives.md  save_system.md
pyinstaller/: amor_mortuorum_cli.spec  amor_mortuorum_gui.spec
tests/: conftest.py  test_ambient_manager.py  test_audio_boss_layers.py  test_audio_mixer.py  test_bootstrap_window.py  test_bounds_collision.py  test_bsp_generation.py  test_build_binary.py  test_chest_interaction.py  test_chunked_batch.py  test_combat_damage.py  test_combat_engine.py  test_combat_items.py  test_combat_log.py  test_combat_rewards.py  test_command_menu.py  test_controller_stubs.py  test_crypt.py  test_crypt_ui.py  test_damage.py  test_data_loader.py  test_debug_overlay.py  test_defend_and_flee.py  test_determinism.py  test_dungeon_generation.py  test_encounters.py  test_engine_loop.py  test_epic_manager.py  test_epic_perf_stability.py  test_epic_tool.py  test_epic_utils.py  test_equipment_logic.py  test_final_relic_award.py  test_floating_text.py  test_fog_of_war.py  test_formations.py  test_game_minimap_integration.py  test_github_client_unit.py  test_github_integration.py  test_graveyard.py  (+57 more)
tools/: create_epic_and_issues.py  epic_manager.py  issue_sync.py
(+359 files in other folders)
