[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amormortuorum"
version = "0.1.0"
description = "Amor Mortuorum core logic modules"
authors = [{name = "Amor Mortuorum Team"}]
readme = "README.md"
requires-python = ">=3.9"

[tool.pytest.ini_options]
addopts = "-q"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
