[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amor-mortuorum"
version = "0.1.0"
description = "Amor Mortuorum - A modern, dark roguelite built with Python + Arcade"
readme = "README.md"
authors = [{ name = "Amor Mortuorum Team" }]
requires-python = ">=3.10"
dependencies = [
    "arcade==2.6.17",
    "PyYAML>=6.0",
    "requests>=2.31",
    "responses>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "flake8>=6.1",
]

[project.scripts]
amor = "amormortuorum.cli:main"
am-epic = "am_epic.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["amormortuorum*", "am_epic*", "epic*"]
